To the End of 2021 (11)

--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -298,7 +298,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Đây là chỉ số tấn công thô của bạn. Bạn không nên quá dựa dẫm vào nó để đánh giá sức mạnh của nhân vật.<br> Chỉ số này ảnh hưởng đến đòn đánh thường và sát thương kĩ năng, và cả khả năng trị liệu.",
+        "vi":"Đây là chỉ số tấn công thô của bạn. Bạn không nên quá dựa dẫm vào nó để đánh giá sức mạnh của nhân vật.<br> Chỉ số này ảnh hưởng đến đòn đánh thường và sát thương kỹ năng, và cả khả năng trị liệu.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -532,7 +532,7 @@
         "de":"Verbesserte Fähigkeiten",
         "jp":"",
         "pt":"",
-        "vi":"Tăng Kỹ năng",
+        "vi":"Tăng Kỹ Năng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -892,7 +892,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Làm tăng khả năng bạo kích của các kĩ năng lên X%. Đối lập với Tránh Kỹ Bạo.",
+        "vi":"Làm tăng khả năng bạo kích của các kỹ năng lên X%. Đối lập với Tránh Kỹ Bạo.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3754,7 +3754,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Kĩ Năng Thiên Phú {0}",
+        "vi":"Kỹ Năng Thiên Phú {0}",
         "ar":"",
         "it":"",
         "pl":"",
