--- a/Translation/item.json
+++ b/Translation/item.json
@@ -8776,7 +8776,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cầu Tri Thức",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8794,7 +8794,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Tinh Thể Tham Vọng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8812,7 +8812,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Khiên Tiên Phong",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8830,7 +8830,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Lửa Diễm Ma",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8838,7 +8838,7 @@
         "id":""
     },
     "item.10113.name":{
-        "en":"Strang Eye",
+        "en":"Strange Eye",
         "fr":"Oeil Etrange",
         "es":"",
         "ch":"",
@@ -8848,7 +8848,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Dị Nhãn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -8866,7 +8866,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Trái Tim Dung Nham",
         "ar":"",
         "it":"",
         "pl":"",
@@ -10846,7 +10846,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cấp 10 Nguyên Liệu Trang Bị Phẩm Cấp D",
         "ar":"",
         "it":"",
         "pl":"",
@@ -10864,7 +10864,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cấp 20 Nguyên Liệu Trang Bị Phẩm Cấp D",
         "ar":"",
         "it":"",
         "pl":"",
@@ -10882,7 +10882,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cấp 10 Nguyên Liệu Trang Bị Phẩm Cấp C",
         "ar":"",
         "it":"",
         "pl":"",
@@ -10900,7 +10900,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cấp 10 Nguyên Liệu Trang Bị Phẩm Cấp B",
         "ar":"",
         "it":"",
         "pl":"",
@@ -10918,7 +10918,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cấp 10 Nguyên Liệu Trang Bị Phẩm Cấp A",
         "ar":"",
         "it":"",
         "pl":"",
@@ -10936,7 +10936,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cấp 30 Nguyên Liệu Trang Bị Phẩm Cấp D",
         "ar":"",
         "it":"",
         "pl":"",
@@ -10954,7 +10954,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cấp 30 Nguyên Liệu Trang Bị Phẩm Cấp C",
         "ar":"",
         "it":"",
         "pl":"",
@@ -10972,7 +10972,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cấp 30 Nguyên Liệu Trang Bị Phẩm Cấp B",
         "ar":"",
         "it":"",
         "pl":"",
@@ -10990,7 +10990,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Cấp 30 Nguyên Liệu Trang Bị Phẩm Cấp A",
         "ar":"",
         "it":"",
         "pl":"",
