--- a/Translation/map.json
+++ b/Translation/map.json
@@ -550,7 +550,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Trại Hải Tặc",
         "ar":"",
         "it":"",
         "pl":"",
@@ -568,7 +568,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Ốc Đảo Sa Mạc",
         "ar":"",
         "it":"",
         "pl":"",
@@ -586,7 +586,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Ngoại Ô Muradin",
         "ar":"",
         "it":"",
         "pl":"",
