--- a/Translation/skills.json
+++ b/Translation/skills.json
@@ -1270,7 +1270,7 @@
         "de":"Schlägt das Ziel mit kraftvollen Schüssen zurück. Hat eine höhere Chance, das Ziel für 3 Sekunden entsprechend der Fähigkeitsstufe zu lähmen.",
         "jp":"",
         "pt":"",
-        "vi":"Đẩy lùi mục tiêu bằng những phát bắn mạnh mẽ. Có thể làm Tê Liệt mục tiêu trong 3 giây theo cấp độ Kỹ năng.",
+        "vi":"Đẩy lùi mục tiêu bằng những phát bắn mạnh mẽ. Có thể làm Tê Liệt mục tiêu trong 3 giây theo cấp độ kỹ năng.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -6832,7 +6832,7 @@
         "de": "",
         "jp": "",
         "pt": "",
-        "vi": "Khi bẫy bị kích hoạt, độc phát tán 8 kẻ thù trong vòng 6 mét quanh bẫy, giảm 80% Tốc Độ Tấn Công của chúng và hạ 5% Giảm Sát Thương đồng thời khiến chúng không thể sử dụng kĩ năng trong 5 giây.",
+        "vi": "Khi bẫy bị kích hoạt, độc phát tán 8 kẻ thù trong vòng 6 mét quanh bẫy, giảm 80% Tốc Độ Tấn Công của chúng và hạ 5% Giảm Sát Thương đồng thời khiến chúng không thể sử dụng kỹ năng trong 5 giây.",
         "ar": "",
         "it": "",
         "pl": "",
@@ -9442,7 +9442,7 @@
         "de": "",
         "jp": "",
         "pt": "",
-        "vi": "Thêm 1 Bạo Kích Nhẫn. Tăng tỉ lệ Bạo Kích đi kèm áp dụng cho kĩ năng.",
+        "vi": "Thêm 1 Bạo Kích Nhẫn. Tăng tỉ lệ Bạo Kích đi kèm áp dụng cho kỹ năng.",
         "ar": "",
         "it": "",
         "pl": "",
