--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -3448,7 +3448,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Hầu hết các loại quái vật đều có thể trở thành Tinh Linh. Nếu bạn tìm được một Linh Trứng, nhấn chuột phải lên quả trứng để thử ấp nó, nhưng sẽ có khả năng thất bại.<br> 1) Giết quái vật Tinh Anh có thể rơi ra trứng.<br> 2) Trong khi đánh phó bản, tiêu diệt trùm cuối và các loại quái đặc biệt có thể rơi ra trứng.<br> 3) Đánh trùm thế giới cũng có khả năng nhỏ rơi ra trứng.<br> 4) Loại trứng càng hiếm, loài thú đó càng mạnh, và cũng có nhiều may mắn hơn để trứng nở ra thành công.",
+        "vi":"Hầu hết các loại quái vật đều có thể trở thành Tinh Linh. Nếu bạn tìm được một Linh Trứng, nhấn chuột phải lên quả trứng để thử ấp nó, nhưng sẽ có khả năng thất bại.<br> 1) Giết quái vật Tinh Anh có thể rơi ra trứng.<br> 2) Trong khi đánh phụ bản, tiêu diệt trùm cuối và các loại quái đặc biệt có thể rơi ra trứng.<br> 3) Đánh trùm thế giới cũng có khả năng nhỏ rơi ra trứng.<br> 4) Loại trứng càng hiếm, loài thú đó càng mạnh, và cũng có nhiều may mắn hơn để trứng nở ra thành công.",
         "ar":"",
         "it":"",
         "pl":"",
