--- a/Translation/config.json
+++ b/Translation/config.json
@@ -64,7 +64,7 @@
         "de":"Lautstärke der Soundeffekte",
         "jp":"",
         "pt":"",
-        "vi":"Âm lượng Hiệu Ứng",
+        "vi":"Âm Lượng Hiệu Ứng",
         "ar":"",
         "it":"",
         "pl":"",
