--- a/Translation/item.json
+++ b/Translation/item.json
@@ -3430,7 +3430,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"[Linh Trứng] Đánh Thuê Tận Thế",
+        "vi":"[Linh Trứng] Lính Đánh Thuê Tận Thế",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3484,7 +3484,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"[Linh Trứng] Cướp Xa Mạc",
+        "vi":"[Linh Trứng] Tướng Cướp Sa Mạc",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4600,7 +4600,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Cướp Xa Mạc",
+        "vi":"Tướng Cướp Sa Mạc",
         "ar":"",
         "it":"",
         "pl":"",
