--- a/Translation/map.json
+++ b/Translation/map.json
@@ -604,7 +604,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Phiên Chợ Muradin",
         "ar":"",
         "it":"",
         "pl":"",
@@ -622,7 +622,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Thành Phố Byron 1",
         "ar":"",
         "it":"",
         "pl":"",
