new maps + random NPC

--- a/Translation/map.json
+++ b/Translation/map.json
@@ -361,7 +361,7 @@
     },
     "map.Celebeam Hall of Elite.name":{
         "en":"Celebeam Hall of Elite",
-        "fr":"Celebeam Hall d'élite",
+        "fr":"Celebeam Hall d'Élite",
         "es":"",
         "ch":"",
         "kr":"",
@@ -379,7 +379,7 @@
     },
     "map.Celebeam Hall of Deep.name":{
         "en":"Celebeam Hall of Elite Deep",
-        "fr":"Celebeam Hall d'élite profond",
+        "fr":"Celebeam Hall d'Élite profond",
         "es":"",
         "ch":"",
         "kr":"",
@@ -614,6 +614,42 @@
     "map.C2_Byron_City_Floor_1.name":{
         "en":"Byron City 1",
         "fr":"Ville de Byron 1",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "map.C2_Byron_City_Hall_Of_Elite.name":{
+        "en":"Byron City Hall of Elite",
+        "fr":"Ville de Byron Hall d'Élite",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "map.C2_Byron_City_Hall_Of_Elite_Deep.name":{
+        "en":"Byron City Hall of Elite Deep",
+        "fr":"Ville de Byron Hall d'Élite Profond",
         "es":"",
         "ch":"",
         "kr":"",
