--- a/Translation/item.json
+++ b/Translation/item.json
@@ -3286,7 +3286,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"[Linh Trứng] Rắn Niêu",
+        "vi":"[Linh Trứng] Niêu Xà",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4402,7 +4402,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Rắn Niêu",
+        "vi":"Niêu Xà",
         "ar":"",
         "it":"",
         "pl":"",
@@ -10162,7 +10162,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Địa Thừng",
         "ar":"",
         "it":"",
         "pl":"",
