--- a/Translation/item.json
+++ b/Translation/item.json
@@ -3718,7 +3718,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"[Linh Trứng] Móc Thuyền Trưởng",
+        "vi":"[Linh Trứng] Thuyền Trưởng Móc",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4330,7 +4330,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Hải Tặc Rình Rập",
+        "vi":"Hải Tặc Phục Kích",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4834,7 +4834,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Móc Thuyền Trưởng",
+        "vi":"Thuyền Trưởng Móc",
         "ar":"",
         "it":"",
         "pl":"",
