--- a/Translation/map.json
+++ b/Translation/map.json
@@ -613,7 +613,7 @@
     },
     "map.C2_Byron_City_Floor_1.name":{
         "en":"Byron City 1",
-        "fr":"Ville de Byron 1",
+        "fr":"Cité de Byron 1",
         "es":"",
         "ch":"",
         "kr":"",
@@ -631,7 +631,7 @@
     },
     "map.C2_Byron_City_Hall_Of_Elite.name":{
         "en":"Byron City Hall of Elite",
-        "fr":"Ville de Byron Hall d'Élite",
+        "fr":"Cité de Byron Hall d'Élite",
         "es":"",
         "ch":"",
         "kr":"",
@@ -649,7 +649,7 @@
     },
     "map.C2_Byron_City_Hall_Of_Elite_Deep.name":{
         "en":"Byron City Hall of Elite Deep",
-        "fr":"Ville de Byron Hall d'Élite Profond",
+        "fr":"Cité de Byron Hall d'Élite Profond",
         "es":"",
         "ch":"",
         "kr":"",
