--- a/Translation/item.json
+++ b/Translation/item.json
@@ -11069,6 +11069,492 @@
         "th":"",
         "id":""
     },
+    "item.10100.description":{
+        "en":"Lv. 10 Gear Material",
+        "fr":"Matériaux d'Équipement Nv. 10",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10101.description":{
+        "en":"Lv. 10 Gear Material",
+        "fr":"Matériaux d'Équipement Nv. 10",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10102.description":{
+        "en":"Lv. 10 Gear Material",
+        "fr":"Matériaux d'Équipement Nv. 10",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10103.description":{
+        "en":"Lv. 20 Gear Grade D Material",
+        "fr":"Matériaux d'Équipement Nv. 20 Grade D",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Cấp 20 Nguyên Liệu Trang Bị Phẩm Cấp D",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10104.description":{
+        "en":"Lv. 20 Gear Grade C Material",
+        "fr":"Matériaux d'Équipement Nv. 20 Grade C",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Cấp 10 Nguyên Liệu Trang Bị Phẩm Cấp C",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10105.description":{
+        "en":"Lv. 20 Gear Grade B Material",
+        "fr":"Matériaux d'Équipement Nv. 20 Grade B",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Cấp 10 Nguyên Liệu Trang Bị Phẩm Cấp B",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10106.description":{
+        "en":"Lv. 20 Gear Grade A Material",
+        "fr":"Matériaux d'Équipement Nv. 20 Grade A",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Cấp 10 Nguyên Liệu Trang Bị Phẩm Cấp A",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10107.description":{
+        "en":"Lv. 30 Gear Grade D Material",
+        "fr":"Matériaux d'Équipement Nv. 30 Grade D",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Cấp 30 Nguyên Liệu Trang Bị Phẩm Cấp D",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10108.description":{
+        "en":"Lv. 30 Gear Grade C Material",
+        "fr":"Matériaux d'Équipement Nv. 30 Grade C",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Cấp 30 Nguyên Liệu Trang Bị Phẩm Cấp C",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10109.description":{
+        "en":"Lv. 30 Gear Grade B Material",
+        "fr":"Matériaux d'Équipement Nv. 30 Grade B",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Cấp 30 Nguyên Liệu Trang Bị Phẩm Cấp B",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10110.description":{
+        "en":"Lv. 30 Gear Grade A Material",
+        "fr":"Matériaux d'Équipement Nv. 30 Grade A",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Cấp 30 Nguyên Liệu Trang Bị Phẩm Cấp A",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10111.description":{
+        "en":"Lv. 40 Gear Grade D Material",
+        "fr":"Matériaux d'Équipement Nv. 40 Grade D",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Cấp 40 Nguyên Liệu Trang Bị Phẩm Cấp D",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10112.description":{
+        "en":"Lv. 40 Gear Grade C Material",
+        "fr":"Matériaux d'Équipement Nv. 40 Grade C",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Cấp 40 Nguyên Liệu Trang Bị Phẩm Cấp C",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10113.description":{
+        "en":"Lv. 40 Gear Grade B Material",
+        "fr":"Matériaux d'Équipement Nv. 40 Grade B",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Cấp 40 Nguyên Liệu Trang Bị Phẩm Cấp B",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10114.description":{
+        "en":"Lv. 40 Gear Grade A Material",
+        "fr":"Matériaux d'Équipement Nv. 40 Grade A",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Cấp 40 Nguyên Liệu Trang Bị Phẩm Cấp A",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10115.description":{
+        "en":"Lv. 50 Gear Grade D Material",
+        "fr":"Matériaux d'Équipement Nv. 50 Grade D",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Cấp 50 Nguyên Liệu Trang Bị Phẩm Cấp D",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10116.description":{
+        "en":"Lv. 50 Gear Grade C Material",
+        "fr":"Matériaux d'Équipement Nv. 50 Grade C",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Cấp 50 Nguyên Liệu Trang Bị Phẩm Cấp C",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10117.description":{
+        "en":"Lv. 50 Gear Grade B Material",
+        "fr":"Matériaux d'Équipement Nv. 50 Grade B",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Cấp 50 Nguyên Liệu Trang Bị Phẩm Cấp B",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10118.description":{
+        "en":"Lv. 50 Gear Grade A Material",
+        "fr":"Matériaux d'Équipement Nv. 50 Grade A",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Cấp 50 Nguyên Liệu Trang Bị Phẩm Cấp A",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10119.description":{
+        "en":"Lv. 60 Gear Grade D Material",
+        "fr":"Matériaux d'Équipement Nv. 60 Grade D",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Cấp 60 Nguyên Liệu Trang Bị Phẩm Cấp D",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10120.description":{
+        "en":"Lv. 60 Gear Grade C Material",
+        "fr":"Matériaux d'Équipement Nv. 60 Grade C",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Cấp 60 Nguyên Liệu Trang Bị Phẩm Cấp C",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10121.description":{
+        "en":"Lv. 60 Gear Grade B Material",
+        "fr":"Matériaux d'Équipement Nv. 60 Grade B",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Cấp 60 Nguyên Liệu Trang Bị Phẩm Cấp B",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10122.description":{
+        "en":"Lv. 60 Gear Grade A Material",
+        "fr":"Matériaux d'Équipement Nv. 60 Grade A",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Cấp 60 Nguyên Liệu Trang Bị Phẩm Cấp A",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10123.description":{
+        "en":"Lv. 70 Gear Grade D Material",
+        "fr":"Matériaux d'Équipement Nv. 70 Grade D",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Cấp 70 Nguyên Liệu Trang Bị Phẩm Cấp D",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10124.description":{
+        "en":"Lv. 70 Gear Grade C Material",
+        "fr":"Matériaux d'Équipement Nv. 70 Grade C",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Cấp 70 Nguyên Liệu Trang Bị Phẩm Cấp C",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10125.description":{
+        "en":"Lv. 70 Gear Grade B Material",
+        "fr":"Matériaux d'Équipement Nv. 70 Grade B",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Cấp 70 Nguyên Liệu Trang Bị Phẩm Cấp B",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.10126.description":{
+        "en":"Lv. 70 Gear Grade A Material",
+        "fr":"Matériaux d'Équipement Nv. 70 Grade A",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Cấp 70 Nguyên Liệu Trang Bị Phẩm Cấp A",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.10500.description":{
         "en":"Lv. 10 Gear Grade D Material",
         "fr":"Matériaux d'Équipement Nv. 10 Grade D",
